Add package member visitor